--- a/Essay/templates/Essay/create_form.html
+++ b/Essay/templates/Essay/create_form.html
@@ -12,15 +12,16 @@
 <div class="main-body">
 	<div class="content">
 	
-		{% if request.user.is_authenticated %}
-		<form action="{% url 'essay_create' %}" method="POST">
-			{% csrf_token %}
-	        <h1>{{ form.title }}</h1>
-            <h1>{{ form.slug }}</h1>
+	{% if request.user.is_authenticated %}
+	<form action="{% url 'essay_create' %}" method="POST">
+	    {% csrf_token %}
+	    <h1>{{ form.title }}</h1>
+            <div>{{ form.is_draft }} Draft</div>
             <div>{{ form.category }}</div>
+
             <input type="submit" name="submit" value="Save" />
             {{ form.content }}
-		</form>
+	</form>
         {% else %}
         <p>You are not logged in.</p>
 		{% endif %}
