--- a/Essay/templates/Essay/edit_form.html
+++ b/Essay/templates/Essay/edit_form.html
@@ -11,18 +11,17 @@
 
 <div class="main-body">
 	<div class="content">
-        <h1>{{ essay.title }}</h1>
-
-		{% if request.user.is_authenticated %}
-		<form action="{% url 'essay_update' essay.slug %}" method="POST">
-			{% csrf_token %}
+	{% if request.user.is_authenticated %}
+	<form action="{% url 'essay_update' essay.slug %}" method="POST">
+	    {% csrf_token %}
+            <h1>{{ form.title }}</h1>
+            <div>{{ form.is_draft }} Draft </div>
             <input type="submit" name="submit" value="Save" />
             {{ form.content }}
-		</form>
+	</form>
         {% else %}
         <p>You are not logged in.</p>
-		{% endif %}
-
+	{% endif %}
 	</div>
 </div>
 
